--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
 *
-
-.container2{
+body{
+    min-height: 100vh;
+    width: 100%;
+    background:linear-gradient(90deg,darkolivegreen,rgb(214, 240, 171));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.container{
     width: 80%;
     background-color: white;
     border-radius: 6px;
     padding: 30px 60px 40px 40px;
     box-shadow: 0 5px 10px rgb(0, 0, 0) ;
 }
-.container2 .contactus{
+.container .content{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.container2 .contactus .contactinfo{
+.container .content .left-side{
     width: 25%;
     height: 100%;
     margin-top: 15px;
@@ -22,7 +29,7 @@
     justify-content: center;
     position: relative;
 }
-.contactus .contactinfo::before{
+.content .left-side::before{
 content:'';
 position: absolute;
 height: 70%;
@@ -33,41 +40,41 @@ transform: translateY(-50%);
 background: darkslategray;
 }
 
-.contactus .contactinfo .details{
+.content .left-side .details{
     margin: 14px;
     text-align: center;
 }
-.contactus .contactinfo .details i{
+.content .left-side .details i{
     font-size: 30px;
     color: darkolivegreen;
     margin-bottom: 10px;
 }
-.contactus .contactinfo .details .beg{
+.content .left-side .details .topic{
     font-size: 18px;
     font-weight: 500;
 }
-.contactus .contactinfo .details.accumalaka, 
-.contactus .contactinfo .details .alamak{
+.content .left-side .details .text-one, 
+.content .left-side .details .text-two{
     font-size: 14px;
     color: darkgray;
 }
 
-.container2 .contactus .contactac{
+.container .content .right-side{
     width: 75%;
     margin-left: 75px;
 }
-.contactus .contactac .contact-text{
+.content .right-side .topic-text{
     font-size: 23px;
     font-weight: 600;
     color: darkolivegreen;
 }
-.contactac .boxinfo{
+.right-side .input-box{
     height: 50px;
     width: 100%;
     margin: 12px 0;
 }
-.contactac .contact-text .boxinfo input,
-.contactac .contact-text .boxinfo textarea{
+.right-side .input-box input,
+.right-side .input-box textarea{
     height: 100%;
     width: 100%;
     border: none;
@@ -77,15 +84,15 @@ background: darkslategray;
     padding: 0 15px;
     resize: none;
 }
-.contactac .message{
+.right-side .message-box{
     min-height: 110px; 
     margin-top: 6px;
 }
-.contactac .buttons{
+.right-side .button{
     margin-top: 6px;
     display: inline-block;
 }
-.contactac .buttons input[type="button"]{
+.right-side .button input[type="button"]{
     color: white;
     font-size: 18px;
     outline: none;
@@ -96,34 +103,34 @@ background: darkslategray;
     cursor: pointer;
     transition: all 0.3s ease;
 }
-.buttons input[type="button"]:hover{
+.button input[type="button"]:hover{
     background: green;
 }
 @media (max-width:950px){
-    .container2{
+    .container{
         width: 90%;
         padding: 30px 35px 40px 35px;
     }
 }
 @media (max-width:820px){
-    .container2{
+    .container{
         margin: 40px 0;
         height: 100%;
     }
-    .container2 .contactus{
+    .container .content{
         flex-direction: column-reverse;
     }
-    .container2 .contactus .contactinfo{
+    .container .content .left-side{
         width: 100%;
         flex-direction: row;
         margin-top: 40px;
         justify-content: center;
         flex-wrap: wrap;
     }
-    .container2 .contactus .contactinfo::before{
+    .container .content .left-side::before{
         display: none;
     }
-    .container2 .contactus .contactac{
+    .container .content .right-side{
         width: 100%;
         margin-left: 0;
     }
