--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-body{
+.bodys{
     min-height: 100vh;
     width: 100%;
     background:linear-gradient(90deg,darkolivegreen,rgb(214, 240, 171));
@@ -12,19 +12,19 @@ body{
     align-items: center;
     justify-content: center;
 }
-.container{
+.container2{
     width: 80%;
     background-color: white;
     border-radius: 6px;
     padding: 30px 60px 40px 40px;
     box-shadow: 0 5px 10px rgb(0, 0, 0) ;
 }
-.container .content{
+.container2 .contents{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.container .content .left-side{
+.container2 .contents .left-side{
     width: 25%;
     height: 100%;
     margin-top: 15px;
@@ -34,7 +34,7 @@ body{
     justify-content: center;
     position: relative;
 }
-.content .left-side::before{
+.contents .left-side::before{
 content:'';
 position: absolute;
 height: 70%;
@@ -45,30 +45,30 @@ transform: translateY(-50%);
 background: darkslategray;
 }
 
-.content .left-side .details{
+.contents .left-side .details{
     margin: 14px;
     text-align: center;
 }
-.content .left-side .details i{
+.contents .left-side .details i{
     font-size: 30px;
     color: darkolivegreen;
     margin-bottom: 10px;
 }
-.content .left-side .details .topic{
+.contents .left-side .details .topic{
     font-size: 18px;
     font-weight: 500;
 }
-.content .left-side .details .text-one, 
-.content .left-side .details .text-two{
+.contents .left-side .details .text-one, 
+.contents .left-side .details .text-two{
     font-size: 14px;
     color: darkgray;
 }
 
-.container .content .right-side{
+.container2 .contents .right-side{
     width: 75%;
     margin-left: 75px;
 }
-.content .right-side .topic-text{
+.contents .right-side .topic-text{
     font-size: 23px;
     font-weight: 600;
     color: darkolivegreen;
@@ -112,30 +112,30 @@ background: darkslategray;
     background: green;
 }
 @media (max-width:950px){
-    .container{
+    .container2{
         width: 90%;
         padding: 30px 35px 40px 35px;
     }
 }
 @media (max-width:820px){
-    .container{
+    .container2{
         margin: 40px 0;
         height: 100%;
     }
-    .container .content{
+    .container2 .contents{
         flex-direction: column-reverse;
     }
-    .container .content .left-side{
+    .container2 .contents .left-side{
         width: 100%;
         flex-direction: row;
         margin-top: 40px;
         justify-content: center;
         flex-wrap: wrap;
     }
-    .container .content .left-side::before{
+    .container2 .contents .left-side::before{
         display: none;
     }
-    .container .content .right-side{
+    .container2 .contents .right-side{
         width: 100%;
         margin-left: 0;
     }
